// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputCard Component Call function when button is clicked 1`] = `
<div>
  <div
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 10px;"
    >
      <h5
        data-testid="h5description0"
      >
        Description
      </h5>
      <div
        style="background-color: white;"
      >
        <button
          class="btn"
          style="color: rgb(41, 41, 41);"
        >
          Write
        </button>
        <button
          class="btn"
          style="color: rgb(142, 142, 142);"
        >
          Preview
        </button>
        <textarea
          data-testid="textbox"
          placeholder="Type something..."
          style="padding: 1rem; width: 100%;"
        />
      </div>
    </div>
    <div
      style="display: inline-block; margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`InputCard Component Input value should be nothing when value prop is not there 1`] = `
<div>
  <div
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 10px;"
    >
      <h5
        data-testid="h5super0"
      >
        Super
      </h5>
      <input
        aria-describedby="basic-addon1"
        aria-label=""
        class="form-control"
        data-testid="inputsuper"
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      style="display: inline-block; margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`InputCard Component Should output empty title when title is empty 1`] = `
<div>
  <div
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 10px;"
    >
      <h5
        data-testid="h50"
      />
      <input
        aria-describedby="basic-addon1"
        aria-label=""
        class="form-control"
        data-testid="input"
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      style="display: inline-block; margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`InputCard Component Should render nothing if id is a title 1`] = `
<div>
  <div
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      style="display: inline-block; margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`InputCard Component Should render text onto textbox when user types 1`] = `
<div>
  <div
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 10px;"
    >
      <h5
        data-testid="h5super0"
      >
        Super
      </h5>
      <input
        aria-describedby="basic-addon1"
        aria-label=""
        class="form-control"
        data-testid="inputsuper"
        placeholder=""
        type="text"
        value="Javascript"
      />
    </div>
    <div
      style="display: inline-block; margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`InputCard Component Should render textbox when title is description 1`] = `
<div>
  <div
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 10px;"
    >
      <h5
        data-testid="h5description0"
      >
        Description
      </h5>
      <div
        style="background-color: white;"
      >
        <button
          class="btn"
          style="color: rgb(41, 41, 41);"
        >
          Write
        </button>
        <button
          class="btn"
          style="color: rgb(142, 142, 142);"
        >
          Preview
        </button>
        <textarea
          data-testid="textbox"
          placeholder="Type something..."
          style="padding: 1rem; width: 100%;"
        >
          Javascript
        </textarea>
      </div>
    </div>
    <div
      style="display: inline-block; margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;
